fixed image spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -192,7 +192,7 @@ nav a {
 .project-photos {
   /* width: 925px; */
   padding-top: 0.5rem;
-  height: 88vh;
+  height: auto;
   position: relative;
 }
 .project-photos:not(:last-of-type) {
@@ -206,12 +206,14 @@ nav a {
   max-height: inherit;
   opacity: 0;
   z-index: 0;
-  transition: opacity .5s ease-in-out;
+  transition: opacity 0.5s ease-out;
+	top:0.5rem;
 }
 
 .show {
   opacity: 1;
   z-index: 10;
+	position: initial;
 }
 
 
@@ -265,11 +267,11 @@ p:nth-of-type(2) {
 
 	.project-photos {
 		width: 100%;
-		height: 283px;
+		/* height: 283px; */
 	}
 
 	.project-photos:not(:last-of-type) {
-	    margin-bottom: 2.2rem;
+	    margin-bottom: 0.3rem;
 	}
 
 	.project-description {
